--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,10 @@
   "prettier.enable": false,
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   },
   "i18n-ally.localesPaths": [
     "locales"
-  ]
+  ],
+  "nuxt.isNuxtApp": false
 }
